# GESSO

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  gesso_demo.ipynb  gesso_demo_10xvisium.ipynb  gesso_demo_behavior_at_extremes.ipynb  gesso_demo_cosmx.ipynb  gesso_demo_stereoseq.ipynb  gesso_demo_visiumhd.ipynb  gesso_demo_xenium_prime.ipynb  index.rst
docs/classes/: GeneSetActivityScoresReport.rst
gesso/_src/: computation.py  gesso.py  interactive.py
tests/: conftest.py  test_computation.py  test_gesso.py  test_interactive.py
